<resources>
    <string name="app_name">FireClip</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="login_create_new_account">CREATE NEW ACCOUNT</string>
    <string name="login_forgot_password">Forgot password ?</string>
    <string name="clip_no_data_text_field">No clip</string>
    <string name="update_button_text">Update</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="dialog_forgot_pass_text">We\'ll send you a password reset Email</string>
    <string name="create_account_title">Create your account</string>
    <string name="history_header">Recents</string>
    <string name="history_footer">View more</string>
    <string name="signout_text">Signout</string>
    <string name="history_text">History</string>
    <string name="history_sort_by">Sort by</string>
    <string name="history_respect_to">Respect to</string>
    <string name="empty_history">History is empty!</string>
    <string name="intro_greet">Hi There!</string>
    <string name="signin_greet">Signin</string>
    <string name="intro_greet_description">Sign In to get started.</string>
    <string name="intro_login_button_text">Sign In with Email</string>
    <string name="signup_greet">Create your\naccount</string>
    <string name="device_name_head">Name this device</string>
    <string name="device_name_input_text_hint">New Device</string>
    <string name="device_name_next_button_text"><![CDATA[Next >]]></string>
    <string name="initial_card_title">Welcome %s!</string>
    <string name="initial_card_desc">Your device name has been set to \"%s\"</string>
    <string name="initial_card_got_it_text">Got it</string>
    <string name="home_manual_update">Manual Update</string>
    <string name="manual_card_desc">(Update the content across other devices only)</string>
    <string name="manual_card_update_button_text">Update</string>
    <string name="manual_card_hint">Your content…</string>
    <string name="home_quick_settings">Quick Settings</string>
    <string name="quick_settings_card_1_title">Enable Service</string>
    <string name="quick_settings_card_2_title">Auto accept new clips</string>
    <string name="title_delete_dialog">Delete?</string>
    <string name="dialog_signout_title">Signout?</string>
    <string name="dialog_signout_message">All your local history will be removed.</string>
    <string name="home_pins">Pins</string>
    <string name="home_pins_empty">No pins</string>
    <string name="home_pins_loading">Loading pins…</string>
    <string name="action_pin_it">PIN IT</string>
    <string name="action_retry">Retry</string>
    <string name="feedback_text">Send Feedback</string>
    <string name="feedback_hint">Your thoughts, bugs and suggestions…</string>
    <string name="feedback_send_text">Send feedback</string>
    <string name="feedback_desc_text">Your feedback and suggestions will help us to improve your experience with FireClip app</string>
    <string name="action_delete">Delete history</string>
    <string name="title_delete_history_dialog">Delete all history?</string>
    <string name="feedback_dev_title">Are you a developer?</string>
    <string name="feedback_dev_desc">FireClip is opensource. Join with us and improve the user experience.</string>
    <string name="settings_text">Settings</string>
    <string name="tell_friend_title">Tell a Friend</string>
    <string name="tell_friend_message">Hey checkout FireClip. Copy from one device and paste it onto another!. It\'s an Universal clipboard manager app which will increase your productivity!\nhttps://goo.gl/zZEPGh</string>
    <string name="tell_friend_title_chooser">Send to</string>
    <string name="home_text">Home</string>
    <string name="home_history_loading">Loading history…</string>
    <string name="file_upload_copying">Copying file…</string>
    <string name="file_upload_cancel">Cancel</string>
    <string name="fireclip_copy">Copy</string>
    <string name="file_upload_checking">Checking file…</string>
    <string name="file_upload_large_file_size">Oops.. File size is larger than 5MB</string>
    <string name="file_upload_invalid_file">Invalid file name and size</string>
    <string name="file_upload_offline">Oops.. You are offline</string>
    <string name="file_upload_syncing">Syncing…</string>
    <string name="notif_file_title">File from %s</string>
    <string name="notif_file_ticker">New file from %s</string>
    <string name="notif_text_title">Clip from %s</string>
    <string name="notif_text_content">You have a new clip.</string>
    <string name="notif_text_auto_accept">Clip copied from %s</string>
    <string name="action_accept">Accept</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_singout">Signout</string>
    <string name="action_change">Change</string>
    <string name="history_filter">Filter:</string>
    <string name="dialog_delete_history_msg">All the history from %s will be deleted.</string>

    <!--Your Firebase app's server key here-->
    <string name="firebase_server_key">YOUR-SERVER-KEY-HERE</string>
    <string name="fireclip_web_client_id">YOUR-WEB-CLIENT-ID-HERE</string>
    <string name="pin_new_users">
        Hi, I\'m a pinned text. You can view me across the devices you are signed in.\n\n
        Tap and hold to select text. Hit copy to receive the text on all of your devices.
    </string>
    <string name="history_new_users">
        Tap to pin. Tap and hold to delete.
    </string>
</resources>
