<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".IntroActivity">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro_greet"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_greet_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/intro_email_signin_btn"
            android:layout_width="203dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_button_accent_white"
            android:text="@string/intro_login_button_text"
            android:textColor="@color/colorBlack" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/intro_google_signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_google_signin_light"
            android:text="@string/common_signin_button_text_long"
            android:textColor="@color/colorBlack" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/intro_create_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp"
            android:text="@string/login_create_new_account"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>