<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <!--Initial card-->
            <android.support.v7.widget.CardView
                android:id="@+id/home_initial_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/initial_card_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/initial_card_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/initial_card_desc_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/initial_card_desc"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorWhite"
                        android:textStyle="italic" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/initial_card_got_it_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:text="@string/initial_card_got_it_text"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Manual update card-->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_manual_update"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/cardview_light_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/manual_update_card_content_box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:hint="@string/manual_card_hint"
                        android:inputType="textMultiLine"
                        android:textColor="@color/colorBlack" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/manual_card_desc"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="italic" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/manual_update_card_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/manual_card_update_button_text"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!--End-->

            <!--QS-->
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/home_quick_settings"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/quick_settings_card_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/cardview_light_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:weightSum="2">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/quick_settings_card_1_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.9"
                            android:text="@string/quick_settings_card_1_title"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/quick_settings_card_1_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp"
                        android:weightSum="2">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/quick_settings_card_2_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.9"
                            android:text="@string/quick_settings_card_2_title"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/quick_settings_card_2_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--End-->

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>