<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feedback_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/feed_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Theme.AppBar" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/feedback_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="start"
                    android:hint="@string/feedback_hint"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorBlack" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/feedback_send_btn"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_button_accent_white"
                    android:text="@string/feedback_send_text" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:lineSpacingExtra="4dp"
                    android:padding="32dp"
                    android:text="@string/feedback_desc_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/feedback_dev_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/feedback_dev_desc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/feedback_github"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    app:srcCompat="@drawable/ic_github" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>